--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,10 @@ steps:
     version: '5.x'
 
 - task: Npm@1
+  inputs:
+     command: 'install'
+
+- task: Npm@1
   displayName: 'Run npm install'
   inputs:
     verbose: false
