--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ pool:
   name: Default
   demands:
    - agent.name -equals THOFUJITSUU7510
+   - npm
 
 variables:
   buildConfiguration: 'Release'
@@ -24,11 +25,6 @@ steps:
 - task: Npm@1
   inputs:
      command: 'install'
-
-- task: Npm@1
-  displayName: 'Run npm install'
-  inputs:
-    verbose: false
 
 - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
